testsuite/tests/typecheck/should_fail/tcfail057.hs
module ShouldFail where

-- !!! inadvertently using -> instead of =>

f :: (RealFrac a) -> a -> a
f x = x
